assets/css/styles.css
/* @import url('../fonts/Nexa/Nexa-Regular.otf'); */

@font-face {
    font-family: 'Nexa';
    font-weight: normal;
    src: url("../fonts/Nexa/Nexa-Regular.otf") format("opentype");
}

:root{
    --font-fam: 'Nexa';
}

body{
    font-family: var(--font-fam);
    background-color: #181818;
}

.nav-link{
    color: #FFBF8A;
    font-family: var(--font-fam);
    font-style: normal;
    font-weight: 400;
    text-transform: uppercase;
}

.nav-link:hover{
    color: #ffd7b6;
}

.container-fluid{
    padding: 0 !important;
}

.home-banner{
    background-image: url('../img/home-banner/backg.png');
    width: 100%;
    height: 40%;
    padding-top: 8%;
    padding-bottom: 8%;
    padding-left: 0;
    padding-right: 0;
    margin: 0;
    position: relative;
    background-size: contain;
    background-repeat: no-repeat;

}
.content{
    font-family: var(--font-fam);
    font-weight: 400;
    line-height: 46px;
    text-align: center;
    text-transform: capitalize;
    color: #FFBF8A;
}

h2{
    font-family: var(--font-fam);
    font-size: 1.97rem;
}

h3{
    font-size: 2.3rem;
}
h5{
    font-size: 1.7rem;
    width: 30.5rem;
}

.box{
    padding: 34%;
    background-color: #1D1D1D;
    border: 1.45px solid #FFC18E;
}

